# control

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: turntabl.db
tests/: test_cli_reports.py  test_revenue.py  test_tui_helpers.py
turntabl/: __main__.py  cli.py  db.py  reports.py  revenue.py  scenarios.py  tui.py
